# mlcast-sourcedata-validator

./: .gitignore  LICENSE  README.md  main.py  mlcast_validator_source_radar.py  pre-commit.yml  pyproject.toml
.github/: pull_request_template.md
docs/: mlcast_zarr_spec_v1.0.md  validator_spec_design.py
mlcast_dataset_validator/: __init__.py
mlcast_dataset_validator/checks/: data_vars_filter.py
mlcast_dataset_validator/checks/coords/: __init__.py  future_extension.py  names.py  spatial.py  temporal.py  variable_timestep.py
mlcast_dataset_validator/checks/data_vars/: __init__.py  chunking.py  compression.py  data_structure.py  data_variable.py  georeferencing.py  naming.py
mlcast_dataset_validator/checks/global_attributes/: __init__.py  conditional.py  licensing.py  mlcast_metadata.py  zarr_format.py
mlcast_dataset_validator/checks/tool_compatibility/: cartopy.py  gdal.py
mlcast_dataset_validator/checks/tooling/: __init__.py
mlcast_dataset_validator/specs/: base.py  cli.py  reporting.py
mlcast_dataset_validator/specs/source_data/: radar_precipitation.py
mlcast_dataset_validator/utils/: logging_decorator.py
mlcast_validator/: __init__.py
mlcast_validator/checks/: licensing.py
mlcast_validator/checks/content/: data_variable.py  temporal.py
mlcast_validator/checks/coordinates/: __init__.py  coordinate_variables.py  spatial.py  variable_timestep.py
mlcast_validator/checks/coords/: names.py  spatial.py
mlcast_validator/checks/data_variables/: __init__.py  chunking.py  georeferencing.py
mlcast_validator/checks/future_timestep/: future_extension.py
mlcast_validator/checks/global_attributes/: attributes.py  conditional.py  licensing.py
mlcast_validator/checks/technical/: compression.py  coordinate_variables.py  data_structure.py  georeferencing.py  (+1 more)
mlcast_validator/specs/: base.py  radar_precipitation.py
mlcast_validator/utils/: logging_decorator.py
(+6 files in other folders)
