[project]
name = "mlcast-sourcedata-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.9.1",
    "fsspec>=2025.9.0",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "s3fs>=2025.9.0",
    "xarray>=2025.10.0",
    "zarr>=3.1.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
]

[tool.isort]
profile = "black"
