[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mlcast-dataset-validator"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.9.1",
    "fsspec>=2025.9.0",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "s3fs>=2025.9.0",
    "xarray>=2025.10.0",
    "zarr>=3.1.3",
]
scripts = { mlcast-dv = "mlcast_dataset_validator.specs.cli:main" }

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
]
tool-compat = [
    "cartopy>=0.25.0",
    "gdal>=3.12.0.post1",
    "rioxarray>=0.19.0",
]

[tool.isort]
profile = "black"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
